--- a/includes/sponsors.html.eex
+++ b/includes/sponsors.html.eex
@@ -16,14 +16,11 @@
     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
       <span class="img-helper"></span><img src="<%= asset "images/appunite2.png" %>" alt="Image" class="img-fluid">
     </div>
-    <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="400">
-      <span class="img-helper"></span><img src="<%= asset "images/duffel.png" %>" alt="Image" class="img-fluid" style="vertical-align: middle">
-    </div>
   </div>
 
   <div class="row" data-aos="fade-up" data-aos-delay="500">
     <div class="col-12 text-center pt-5">
-      <a href="#" class="btn-custom" data-aos="fade-up" data-aos-delay="800"><span>Be a Sponsor</span></a>
+      <a href="#contact" class="btn-custom" data-aos="fade-up" data-aos-delay="800"><span>Become a Sponsor</span></a>
     </div>
   </div>
 </div>
