--- a/includes/about.html.eex
+++ b/includes/about.html.eex
@@ -3,7 +3,7 @@
     <div class="col-md-10">
       <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Taste Elixir</h1>
       <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Non-profit, community driven initiative to organize Elixir workshops.</span>
-      <a href="#" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Find out more</span></a>
+      <%# <a href="#" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Find out more</span></a> %>
     </div>
   </div>
 </div>
