--- a/templates/base.html.eex
+++ b/templates/base.html.eex
@@ -66,7 +66,7 @@
       <%= include "contact" %>
     </div>
 
-    <footer class="site-footer">
+    <footer id="footer" class="site-footer">
       <%= include "footer" %>
     </footer>
   </div>
